Fixed recipe view having too much padding before comments

--- a/IzvorniKod/website/src/styles/RecipeView.css
+++ b/IzvorniKod/website/src/styles/RecipeView.css
@@ -62,7 +62,6 @@ strong {
 .video-container {
     position: relative;
     width: 100%;
-    padding-bottom: 56.25%; 
     overflow: hidden;
 }
 
